--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
 <body>
     <nav>
         <button>Login</button>
+        <button>Setup</button>
+
     </nav>
     <main>
         <h3>Assignment 05</h3>
