added history part

--- a/home.html
+++ b/home.html
@@ -9,12 +9,12 @@
 </head>
 <body class="justify-center">
     <!-- Nav Bar Start -->
-    <div class="navbar navbar-sm fixed-top-0">
+    <div class="navbar navbar-sm">
         <div class="navbar-start">
             <div>
                 <ul>
                     <li><a>
-                        <button class="btn btn-success">Blog</button>
+                        <button class="btn btn-success w-48 bg-lime-400">Blog</button>
                         </a>
                     </li>
                 </ul>
@@ -27,16 +27,25 @@
             <button class="btn"><img src="assets/coin.png" alt="">5550BDT</button>
         </div>
     </div>
-    <br>
+    
     <!-- Nav Bar End -->
-    <main class="">
+    <main class="mx-48">
+        <!-- Donation and History Button -->
+        <div class="card-actions justify-center my-12">
+            <button class="btn btn-success bg-base-100 w-80 hover:bg-lime-400">
+                <a href="home.html"></a>
+                Donation</button>
+            <button class="btn btn-success bg-base-100 w-80 hover:bg-lime-400">
+                <a href="history.html"></a>
+                History</button>
+        </div>
         <!-- 1st Card start-->
-        <section class="">
+        <section class="mx-auto my-auto">
             <div class="card card-side bg-base-100 shadow-xl">
                 <figure class="max-w-lg">
                     <img class="h-96 max-w-lg object-cover" src="assets/noakhali.png" alt= />
                 </figure>
-                <div class="card-body h-96 max-w-lg object-cover ">
+                <div class="card-body h-96 max-w-lg object-cover">
                     <div class="navbar-end">
                         <button class="btn "> <img src="assets/coin.png" alt="">0 BDT</button>
                     </div>
@@ -51,21 +60,22 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                <button class="btn btn-success bg-base-100 w-80">Donate Now</button>
+                                <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
                             </div>
                         </div>
                 </div>
             </div>
         </section>
+        
         <!-- 1st Card End-->
 
         <!-- 2nd Card start-->
-        <section>
+        <section class="mx-auto my-auto">
             <div class="card card-side bg-base-100 shadow-xl">
                 <figure class="max-w-lg">
                     <img class="h-96 max-w-lg object-cover" src="assets/feni.png" alt= />
                 </figure>
-                <div class="card-body h-96 max-w-lg object-cover">
+                <div class="card-body h-96 max-w-lg object-cover mb-24">
                     <div class="navbar-end">
                         <button class="btn "> <img src="assets/coin.png" alt="">0 BDT</button>
                     </div>
@@ -81,7 +91,7 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                <button class="btn btn-success bg-base-100 w-80">Donate Now</button>
+                                <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
                             </div>
                         </div>
                 </div>
@@ -90,12 +100,12 @@
         <!-- 2nd Card End-->
 
         <!-- 3rd Card start-->
-       <section>
+       <section class="mx-auto my-auto">
         <div class="card card-side bg-base-100 shadow-xl">
             <figure class="max-w-lg">
                 <img class="h-96 max-w-lg object-cover" src="assets/quota-protest.png" alt= />
             </figure>
-            <div class="card-body h-96 max-w-lg object-cover">
+            <div class="card-body h-96 max-w-lg object-cover mb-24">
                 <div class="navbar-end">
                     <button class="btn "> <img src="assets/coin.png" alt="">0 BDT</button>
                 </div>
@@ -112,7 +122,7 @@
                             class="input input-bordered input-md w-full max-w-xs" />
                     </div>
                     <div class="card-actions justify-center ">
-                        <button class="btn btn-success bg-base-100 w-80">Donate Now</button>
+                        <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
                     </div>
                 </div>
             </div>
