added amount history

--- a/history.html
+++ b/history.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>History</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body class="justify-center">
+
+<body>
     <!-- Nav Bar Start -->
-    <div class="navbar navbar-sm">
+     <nav class="navbar navbar-sm">
         <div class="navbar-start">
             <div>
                 <ul>
-                    <li><a>
-                        <button class="btn btn-success w-48 bg-lime-400">Blog</button>
+                    <li><a class="btn btn-success w-48 bg-lime-400">
+                        Blog
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="navbar-center">
+        <div class="justify-center">
             <a class="btn btn-ghost text-xl"><img src="assets/logo.png" alt="">Donate Bangladesh</a>
         </div>
         <div class="navbar-end">
             <button class="btn"><img src="assets/coin.png" alt="">5550BDT</button>
         </div>
-    </div>
+    </nav>
     
     <!-- Nav Bar End -->
+    <!-- Button Start -->
+    <div class="card-actions justify-center my-16">
+            <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="home.html">Donation</a>
+            <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="history.html">History</a>
+    </div>
+    <!-- Button end -->
+    <div class="justify-center">
+        <h3>96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
+        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+    </div>
+    <div class="justify-center">
+        <h3 class="bold">96500 Taka is Donated for famine-2024 at Noakhali, Bangladesh</h3>
+        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+    </div>
+    <div class="justify-center">
+        <h3>96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
+        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+    </div>
+
 </body>
+
 </html>
