added Donation section

--- a/history.html
+++ b/history.html
@@ -38,18 +38,20 @@
             <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="history.html">History</a>
     </div>
     <!-- Button end -->
-    <div class="justify-center">
-        <h3>96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
-        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
-    </div>
-    <div class="justify-center">
-        <h3 class="bold">96500 Taka is Donated for famine-2024 at Noakhali, Bangladesh</h3>
-        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
-    </div>
-    <div class="justify-center">
-        <h3>96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
-        <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
-    </div>
+    <section class="justify-center ml-44">
+        <div class="shadow-md">
+            <h3 class="font-bold">96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
+            <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+        </div>
+        <div class="shadow-md">
+            <h3 class="font-bold">96500 Taka is Donated for famine-2024 at Noakhali, Bangladesh</h3>
+            <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+        </div>
+        <div class="shadow-md">
+            <h3 class="font-bold">96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h3>
+            <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+        </div>
+    </section>
 
 </body>
 
