--- a/home.html
+++ b/home.html
@@ -58,7 +58,8 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
+                                    <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
+                                   
                             </div>
                         </div>
                 </div>
@@ -89,7 +90,7 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
+                                <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
                             </div>
                         </div>
                 </div>
@@ -120,7 +121,7 @@
                             class="input input-bordered input-md w-full max-w-xs" />
                     </div>
                     <div class="card-actions justify-center ">
-                        <button class="btn btn-success bg-base-100 w-80 bg-lime-400">Donate Now</button>
+                        <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
                     </div>
                 </div>
             </div>
