--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
     <!-- Nav Bar End -->
     <!-- Button Start -->
     <div class="card-actions justify-center my-16">
-            <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="home.html">Donation</a>
+            <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="index.html">Donation</a>
             <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="history.html">History</a>
     </div>
     <!-- Button end -->
