--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="mx-48">
         <!-- Donation and History Button -->
         <div class="card-actions justify-center my-12">
-                <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="../assignment-05/home.html">Donation</a>
+                <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400" href="index.html">Donation</a>
                
                 <a class="btn btn-success bg-base-100 w-80 hover:bg-lime-400"
                  href="history.html">History</a>
@@ -48,7 +48,7 @@
                         <button class="btn "> <img src="assets/coin.png" alt="">0 BDT</button>
                     </div>
                     <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-                    <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your donation
+                    <p> The recent floods in Noakhali have caused significant damage to index.htmls infrastructure. Your donation
                         will help provide essential supplies and to those affected by this disaster. Every contribution, big
                         or small, makes difference. Please join us in supporting the relief efforts and making a positive
                         impact on the lives of those in need.</p>
@@ -58,7 +58,7 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                    <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
+                                    <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="congrates.html">Donate Now<a>
                                    
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                                     class="input input-bordered input-md w-full max-w-xs" />
                             </div>
                             <div class="card-actions justify-center ">
-                                <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
+                                <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="congrates.html">Donate Now<a>
                             </div>
                         </div>
                 </div>
@@ -121,7 +121,7 @@
                             class="input input-bordered input-md w-full max-w-xs" />
                     </div>
                     <div class="card-actions justify-center ">
-                        <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="../assignment-05/congrates.html">Donate Now<a>
+                        <a class="btn btn-success bg-base-100 w-80 bg-lime-400" href="congrates.html">Donate Now<a>
                     </div>
                 </div>
             </div>
